--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -4,5 +4,23 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "Jwt": {
+    "Key": "very_very_very_very_very_secret_key",
+    "LifeTimeInMinutes": 15,
+    "Issuer": "BlogApplication",
+    "Audience": "Blog Devs"
+  },
+
+  "ConnectionStrings": {
+    "PostgreSqlDev": "Server=blogpostgresqlserver.postgres.database.azure.com;Database=blogdevdb;Port=5432;User Id=azureuser;Password=Password123!;Ssl Mode=Require;"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.mail.ru",
+    "SmtpPort": 587,
+    "SmtpUser": "abel_mexanik@mail.ru",
+    "SmtpPass": "68952ciKjqxd6NHi9A06"
   }
 }
