Add Identity Migrations

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -14,7 +14,7 @@
   },
 
   "ConnectionStrings": {
-    "PostgreSqlDev": "Server=blogpostgresqlserver.postgres.database.azure.com;Database=blogdevdb;Port=5432;User Id=azureuser;Password=Password123!;Ssl Mode=Require;"
+    "PostgreSqlDev": "Server=blogidentitydb.postgres.database.azure.com;Database=IdentityDb;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
   },
 
   "EmailSettings": {
