--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -14,7 +14,8 @@
   },
 
   "ConnectionStrings": {
-    "PostgreSqlDev": "Server=blogidentitydb.postgres.database.azure.com;Database=IdentityDb;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
+    "PostgreSqlDev": "Server=blogidentitydb.postgres.database.azure.com;Database=IdentityDb;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;",
+    "BlogWebApiDb": "Server=blogwebapidb.postgres.database.azure.com;Database=postgres;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
   },
 
   "EmailSettings": {
