--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -5,5 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+  "Jwt": {
+    "Key": "very_very_very_very_very_secret_key",
+    "LifeTimeInMinutes": 60,
+    "Issuer": "BlogApplication",
+    "Audience": "Blog Devs"
+  },
+
+  "ConnectionStrings": {
+    "PostgreSqlDev": "Server=blogidentitydb.postgres.database.azure.com;Database=IdentityDb;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;",
+    "BlogWebApiDb": "Server=blogwebapidb.postgres.database.azure.com;Database=postgres;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.mail.ru",
+    "SmtpPort": 587,
+    "SmtpUser": "abel_mexanik@mail.ru",
+    "SmtpPass": "68952ciKjqxd6NHi9A06"
+  }
 }
