--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -24,5 +24,11 @@
     "SmtpPort": 587,
     "SmtpUser": "abel_mexanik@mail.ru",
     "SmtpPass": "68952ciKjqxd6NHi9A06"
+  },
+
+  "RabbitMq": {
+    "HostName": "localhost",
+    "UserName": "rmuser",
+    "Password": "rmpassword"
   }
 }
