--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -27,7 +27,7 @@
   },
 
   "RabbitMq": {
-    "HostName": "localhost",
+    "HostName": "4.178.136.16:5672",
     "UserName": "rmuser",
     "Password": "rmpassword"
   }
