--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -26,7 +26,7 @@
   },
 
   "RabbitMq": {
-    "HostName": "localhost",
+    "HostName": "4.178.136.16:5672",
     "UserName": "rmuser",
     "Password": "rmpassword"
   }
