Add RabbitMq again

--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -23,5 +23,11 @@
     "SmtpPort": 587,
     "SmtpUser": "abel_mexanik@mail.ru",
     "SmtpPass": "68952ciKjqxd6NHi9A06"
+  },
+
+  "RabbitMq": {
+    "HostName": "4.178.136.16:5672",
+    "UserName": "rmuser",
+    "Password": "rmpassword"
   }
 }
