--- a/src/appsettings.Development.json
+++ b/src/appsettings.Development.json
@@ -15,7 +15,7 @@
 
   "ConnectionStrings": {
     "PostgreSqlDev": "Server=blogidentitydb.postgres.database.azure.com;Database=IdentityDb;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;",
-    "BlogWebApiDb": "Server=blogwebapidb.postgres.database.azure.com;Database=postgres;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
+    "BlogWebApiDb": "Server=blogwebapi.postgres.database.azure.com;Database=postgres;Port=5432;User Id=blogazure;Password=secret12345!;Ssl Mode=Require;"
   },
 
   "EmailSettings": {
@@ -26,7 +26,8 @@
   },
 
   "RabbitMq": {
-    "HostName": "4.178.136.16:5672",
+    "HostName": "4.178.136.16",
+    "Port": 5672,
     "UserName": "rmuser",
     "Password": "rmpassword"
   }
